trying to split into library

--- a/package.json
+++ b/package.json
@@ -1,88 +1,51 @@
 {
-  "name": "tech-news-analyzer",
+  "name": "libsql-tools",
   "version": "1.0.0",
-  "description": "Tech news scraping and analysis system with libsql storage and embeddings",
-  "main": "dist/index.js",
+  "description": "A collection of tools and utilities for LibSQL",
   "type": "module",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "tsx src/scraper.ts",
-    "test": "jest",
-    "scrape": "tsx src/scraper.ts",
-    "scrape:debug": "tsx src/scraper.ts scrape --debug",
-    "scrape:source": "tsx src/scraper.ts scrape --source",
-    "scrape:source:debug": "tsx src/scraper.ts scrape --source --debug",
-    "rss": "tsx src/rss.ts",
-    "rss:fetch": "tsx src/rss.ts fetch",
-    "rss:list": "tsx src/rss.ts list",
-    "rss:add": "tsx src/rss.ts add",
-    "rss:remove": "tsx src/rss.ts remove",
-    "rss:schedule": "tsx src/rss.ts schedule",
-    "rss:stats": "tsx src/rss.ts stats",
-    "rss:sync-vectorstore": "tsx src/rss.ts sync-vectorstore",
-    "rss-loader": "tsx src/loaders/rss-loader-cli.ts",
-    "rss-loader:load": "tsx src/loaders/rss-loader-cli.ts load",
-    "rss-loader:multiple": "tsx src/loaders/rss-loader-cli.ts load-multiple",
-    "rss-loader:feeds": "tsx src/loaders/rss-loader-cli.ts load-feeds",
-    "rss-loader:list": "tsx src/loaders/rss-loader-cli.ts list",
-    "rss-loader:test": "tsx src/loaders/rss-loader-cli.ts test",
-    "analysis": "tsx src/analysis.ts",
-    "analysis:companies": "tsx src/analysis.ts companies",
-    "analysis:sentiment": "tsx src/analysis.ts sentiment",
-    "analysis:risks": "tsx src/analysis.ts risks",
-    "analysis:opportunities": "tsx src/analysis.ts opportunities",
-    "analysis:stats": "tsx src/analysis.ts stats",
-    "bluesky": "tsx src/bluesky.ts",
-    "bluesky:search": "tsx src/bluesky.ts search",
-    "bluesky:events": "tsx src/bluesky.ts events",
-    "bluesky:trending": "tsx src/bluesky.ts trending",
-    "bluesky:monitor": "tsx src/bluesky.ts monitor",
-    "analyzer": "tsx src/analyzer.ts",
-    "db:init": "tsx src/database/init.ts",
-    "vectorstore": "tsx src/vectorstore.ts",
-    "vectorstore:init": "tsx src/vectorstore.ts init",
-    "vectorstore:add": "tsx src/vectorstore.ts add",
-    "vectorstore:sync": "tsx src/vectorstore.ts sync",
-    "vectorstore:search": "tsx src/vectorstore.ts search",
-    "vectorstore:company": "tsx src/vectorstore.ts company",
-    "vectorstore:sentiment": "tsx src/vectorstore.ts sentiment",
-    "vectorstore:stats": "tsx src/vectorstore.ts stats",
-    "vectorstore:cleanup": "tsx src/vectorstore.ts cleanup",
-    "vectorstore:duplicates": "tsx src/vectorstore.ts duplicates",
-    "vectorstore:dedupe": "tsx src/vectorstore.ts dedupe"
-  },
-  "dependencies": {
-    "@atproto/api": "^0.8.0",
-    "@langchain/core": "^0.3.0",
-    "@langchain/ollama": "^0.2.0",
-    "@libsql/client": "^0.5.0",
-    "@playwright/test": "^1.54.1",
-    "cheerio": "^1.0.0-rc.12",
-    "commander": "^11.1.0",
-    "date-fns": "^2.30.0",
-    "dotenv": "^16.3.0",
-    "langchain": "^0.2.0",
-    "node-cron": "^3.0.3",
-    "playwright": "^1.40.0",
-    "rss-parser": "^3.13.0"
+    "build": "pnpm -r build",
+    "dev": "pnpm -r dev",
+    "clean": "pnpm -r clean",
+    "test": "pnpm -r test",
+    "lint": "pnpm -r lint",
+    "type-check": "pnpm -r type-check",
+    "publish": "pnpm -r publish",
+    "build:watch": "pnpm -r --parallel dev",
+    "build:prod": "pnpm -r build --minify",
+    "build:analyze": "pnpm -r build --sourcemap",
+    "rss": "pnpm --filter @libsql-tools/cli exec rss-loader",
+    "vectorstore": "pnpm --filter @libsql-tools/cli exec libsql-vectorstore",
+    "tools": "pnpm --filter @libsql-tools/cli exec libsql-tools",
+    "rss:load": "pnpm rss load",
+    "rss:list": "pnpm rss list",
+    "rss:test": "pnpm rss test",
+    "vectorstore:init": "pnpm vectorstore init",
+    "vectorstore:add": "pnpm vectorstore add",
+    "vectorstore:search": "pnpm vectorstore search",
+    "vectorstore:stats": "pnpm vectorstore stats",
+    "help": "echo 'Available commands:' && echo '  pnpm rss --help' && echo '  pnpm vectorstore --help' && echo '  pnpm tools --help'"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.0",
     "@types/node": "^20.10.0",
-    "@types/node-cron": "^3.0.11",
-    "jest": "^29.7.0",
-    "tsx": "^4.6.0",
+    "tsup": "^8.0.0",
     "typescript": "^5.3.0"
   },
+  "dependencies": {
+    "@libsql-tools/cli": "workspace:*"
+  },
   "keywords": [
-    "tech-news",
-    "scraping",
-    "embeddings",
     "libsql",
-    "analysis",
-    "ollama",
-    "langchain"
+    "database",
+    "rss",
+    "vectorstore",
+    "embeddings",
+    "tools",
+    "utilities"
   ],
   "author": "Your Name",
   "license": "MIT"
